<resources>
    <string name="app_name">triviamundial</string>


    <string name="hello_blank_fragment">HOLA: No pusiste nombre</string>
    <string name="greeting">Hola,  %1$s!</string>
    <string name="try_again_msg">Bueno, te equivocaste %1$s, ¡intentalo otra vez!</string>
    <string name="trivia_question_one">¿Pais que obtuvo segundo lugar en el último mundial?</string>
    <string name="img_content_description">Whatsapp Logo</string>
    <string name="rb_answer_one">México</string>
    <string name="rb_answer_two">Eslovenia</string>
    <string name="rb_answer_three">Eslovaquia</string>
    <string name="rb_answer_four">Francia</string>
    <string name="send_btn">Enviar</string>
    <string name="write_name">Escribe tu Nombre</string>
    <string name="trivia_welcome_msg">Bienvenido a la Trivia Mundial Qatar 2022, Ingresa tu nombre para comenzar…</string>
    <string name="start_btn">Comenzar</string>
    <string name="tray_again_btn">Intentalo otra vez</string>
    <string name="win_msg">!Genial %1$s¡, Ganaste…</string>
    <string name="txtWinnerTitle">¡¡¡ Felicitaciones %1$s Ganaste !!!</string>
    <string name="loserMessage">%1$s!, estuviste cerca, tu respuesta es incorrecta!!!</string>
    <string name="texto_btn_win">FELICITACIONES.LOGRASTE LA TRIVIA</string>

</resources>